@startuml

title __GRAPHICS's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.BarDataset {
          + show()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      abstract class es.ull.patrones.graphics.CircleGraphics {
          ~ dataset : DefaultPieDataset
          + CircleGraphics()
          {abstract} + getDataset()
          {abstract} + setStrategy()
          {abstract} + showOutput()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      interface es.ull.patrones.graphics.DrawCircleGraphics {
          {abstract} + show()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      interface es.ull.patrones.graphics.DrawLinealGraphics {
          {abstract} + show()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.LineDataset {
          + show()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      abstract class es.ull.patrones.graphics.LinealGraphics {
          ~ dataset : CategoryDataset
          + LinealGraphics()
          {abstract} + getDataset()
          {abstract} + setStrategy()
          {abstract} + showOutput()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyBarChart {
          ~ dataset : CategoryDataset
          + MyBarChart()
          + getDataset()
          + numberOfCases()
          + setDataset()
          + setStrategy()
          + showOutput()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyLineChart {
          ~ dataset : CategoryDataset
          + MyLineChart()
          + getDataset()
          + setDataset()
          + setStrategy()
          + showOutput()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.MyPieChart {
          ~ dataset : DefaultPieDataset
          + MyPieChart()
          + getDataset()
          + numberOfCases()
          + setDataset()
          + setStrategy()
          + showOutput()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.graphics {
      class es.ull.patrones.graphics.PieDataset {
          + show()
      }
    }
  }
  

  es.ull.patrones.graphics.BarDataset .up.|> es.ull.patrones.graphics.DrawLinealGraphics
  es.ull.patrones.graphics.CircleGraphics -up-|> org.jfree.ui.ApplicationFrame
  es.ull.patrones.graphics.LineDataset .up.|> es.ull.patrones.graphics.DrawLinealGraphics
  es.ull.patrones.graphics.LinealGraphics -up-|> org.jfree.ui.ApplicationFrame
  es.ull.patrones.graphics.MyBarChart -up-|> es.ull.patrones.graphics.LinealGraphics
  es.ull.patrones.graphics.MyBarChart o-- es.ull.patrones.graphics.DrawLinealGraphics : drawGraphics
  es.ull.patrones.graphics.MyBarChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.MyLineChart -up-|> es.ull.patrones.graphics.LinealGraphics
  es.ull.patrones.graphics.MyLineChart o-- es.ull.patrones.graphics.DrawLinealGraphics : drawGraphics
  es.ull.patrones.graphics.MyLineChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.MyPieChart -up-|> es.ull.patrones.graphics.CircleGraphics
  es.ull.patrones.graphics.MyPieChart o-- es.ull.patrones.graphics.DrawCircleGraphics : drawGraphics
  es.ull.patrones.graphics.MyPieChart o-- es.ull.patrones.data.CSVReader : reader
  es.ull.patrones.graphics.PieDataset .up.|> es.ull.patrones.graphics.DrawCircleGraphics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
